Update from Weblate (#29)
* Translated using Weblate (German)

Currently translated at 100.0% (12 of 12 strings)

Translation: ioBroker Adapters/ioBroker.loxone
Translate-URL: http://example.com/projects/adapters/loxone/de/

* Updated source strings

* Translated using Weblate (German)

Currently translated at 100.0% (13 of 13 strings)

Translation: ioBroker Adapters/ioBroker.loxone
Translate-URL: http://example.com/projects/adapters/loxone/de/

--- a/i18n/words-de.json
+++ b/i18n/words-de.json
@@ -9,5 +9,7 @@
     "admin/words.js#Rooms": "Räume",
     "admin/words.js#Functions": "Gewerke",
     "admin/words.js#tooltip_host": "IP Adresse von Loxone Miniserver oder DNS-Name",
-    "admin/words.js#new-translation-a": "Deutsch A"
+    "admin/words.js#new-translation-a": "Deutsch A",
+    "admin/words.js#new-translation-b": "Deutsch B",
+    "admin/words.js#new-translation-c": "Deutsch C"
 }
