More admin UI fixes

--- a/admin/i18n/de.json
+++ b/admin/i18n/de.json
@@ -1,12 +1,12 @@
 {
-    "host": "Hostname / IP des Miniservers",
-    "password": "Passwort des Miniservers",
-    "port": "Port des Miniservers",
+    "miniserverHost": "Hostname / IP des Miniservers",
+    "miniserverPassword": "Passwort des Miniservers",
+    "miniserverPort": "Port des Miniservers",
     "syncFunctions": "Funktionen",
     "syncNames": "Namen",
     "syncRooms": "Räume",
     "synchronize": "Synchronisieren",
-    "username": "Benutzername des Miniservers",
+    "miniserverUsername": "Benutzername des Miniservers",
     "weatherServer": "Wetterserver",
     "weatherServer1day": "24 Stunden Wettervorhersage synchronisieren",
     "weatherServerAll": "Gesamte Wettervorhersage synchronisieren",
