--- a/admin/i18n/fr.json
+++ b/admin/i18n/fr.json
@@ -1,15 +1,15 @@
 {
-    "host": "Nom d'hôte/IP du miniserveur",
+    "miniserverHost": "Nom d'hôte/IP du miniserveur",
     "loxone adapter settings": "Paramètres d'adaptateur pour loxone",
     "option1": "option1",
     "option2": "option2",
-    "password": "Mot de passe du mini-serveur",
-    "port": "Port du mini-serveur",
+    "miniserverPassword": "Mot de passe du mini-serveur",
+    "miniserverPort": "Port du mini-serveur",
     "syncFunctions": "Fonctions",
     "syncNames": "Noms",
     "syncRooms": "Chambres",
     "synchronize": "Synchroniser",
-    "username": "Nom d'utilisateur du mini-serveur",
+    "miniserverUsername": "Nom d'utilisateur du mini-serveur",
     "weatherServer": "Serveur Météo",
     "weatherServer1day": "Synchronisez les prévisions météo sur 24 heures",
     "weatherServerAll": "Synchronisez toutes les prévisions météo",
