--- a/admin/i18n/it.json
+++ b/admin/i18n/it.json
@@ -1,15 +1,15 @@
 {
-    "host": "Nome host/IP del miniserver",
+    "miniserverHost": "Nome host/IP del miniserver",
     "loxone adapter settings": "Impostazioni dell'adattatore per loxone",
     "option1": "opzione1",
     "option2": "opzione2",
-    "password": "Password del miniserver",
-    "port": "Porta del miniserver",
+    "miniserverPassword": "Password del miniserver",
+    "miniserverPort": "Porta del miniserver",
     "syncFunctions": "Funzioni",
     "syncNames": "Nomi",
     "syncRooms": "Camere",
     "synchronize": "Sincronizzare",
-    "username": "Nome utente del miniserver",
+    "miniserverUsername": "Nome utente del miniserver",
     "weatherServer": "Server meteo",
     "weatherServer1day": "Sincronizza 24 ore di previsioni meteo",
     "weatherServerAll": "Sincronizza l'intera previsione meteorologica",
