--- a/admin/i18n/nl.json
+++ b/admin/i18n/nl.json
@@ -1,15 +1,15 @@
 {
-    "host": "Hostnaam/IP van miniserver",
+    "miniserverHost": "Hostnaam/IP van miniserver",
     "loxone adapter settings": "Adapterinstellingen voor loxone",
     "option1": "optie1",
     "option2": "optie2",
-    "password": "Miniserver-wachtwoord",
-    "port": "Miniserver-poort",
+    "miniserverPassword": "Miniserver-wachtwoord",
+    "miniserverPort": "Miniserver-poort",
     "syncFunctions": "Functies",
     "syncNames": "Namen",
     "syncRooms": "Kamers",
     "synchronize": "Synchroniseren",
-    "username": "Miniserver-gebruikersnaam",
+    "miniserverUsername": "Miniserver-gebruikersnaam",
     "weatherServer": "Weerserver",
     "weatherServer1day": "Synchroniseer 24 uur weersvoorspelling",
     "weatherServerAll": "Synchroniseer de volledige weersvoorspelling",
