--- a/admin/i18n/pl.json
+++ b/admin/i18n/pl.json
@@ -1,15 +1,15 @@
 {
-    "host": "Nazwa hosta/adres IP miniservera",
+    "miniserverHost": "Nazwa hosta/adres IP miniservera",
     "loxone adapter settings": "Ustawienia adaptera dla loxone",
     "option1": "opcja 1",
     "option2": "opcja 2",
-    "password": "Hasło miniservera",
-    "port": "Port miniserwera",
+    "miniserverPassword": "Hasło miniservera",
+    "miniserverPort": "Port miniserwera",
     "syncFunctions": "Funkcje",
     "syncNames": "Imiona",
     "syncRooms": "Pokoje",
     "synchronize": "Synchronizować",
-    "username": "Nazwa użytkownika miniservera",
+    "miniserverUsername": "Nazwa użytkownika miniservera",
     "weatherServer": "Serwer pogodowy",
     "weatherServer1day": "Synchronizuj 24-godzinną prognozę pogody",
     "weatherServerAll": "Synchronizuj całą prognozę pogody",
