--- a/admin/i18n/pt.json
+++ b/admin/i18n/pt.json
@@ -1,15 +1,15 @@
 {
-    "host": "Nome do host/IP do miniservidor",
+    "miniserverHost": "Nome do host/IP do miniservidor",
     "loxone adapter settings": "Configurações do adaptador para loxone",
     "option1": "opção1",
     "option2": "opção2",
-    "password": "Senha do miniservidor",
-    "port": "Porta miniservidor",
+    "miniserverPassword": "Senha do miniservidor",
+    "miniserverPort": "Porta miniservidor",
     "syncFunctions": "Funções",
     "syncNames": "Nomes",
     "syncRooms": "Quartos",
     "synchronize": "Sincronizar",
-    "username": "Nome de usuário do miniservidor",
+    "miniserverUsername": "Nome de usuário do miniservidor",
     "weatherServer": "Servidor meteorológico",
     "weatherServer1day": "Sincronize 24 horas de previsão do tempo",
     "weatherServerAll": "Sincronize toda a previsão do tempo",
