--- a/admin/i18n/ru.json
+++ b/admin/i18n/ru.json
@@ -1,15 +1,15 @@
 {
-    "host": "Имя хоста/IP мини-сервера",
+    "miniserverHost": "Имя хоста/IP мини-сервера",
     "loxone adapter settings": "Настройки адаптера для loxone",
     "option1": "вариант 1",
     "option2": "вариант 2",
-    "password": "Пароль минисервера",
-    "port": "Порт минисервера",
+    "miniserverPassword": "Пароль минисервера",
+    "miniserverPort": "Порт минисервера",
     "syncFunctions": "Функции",
     "syncNames": "Имена",
     "syncRooms": "Номера",
     "synchronize": "Синхронизировать",
-    "username": "Имя пользователя мини-сервера",
+    "miniserverUsername": "Имя пользователя мини-сервера",
     "weatherServer": "Погодный сервер",
     "weatherServer1day": "Синхронизировать 24-часовой прогноз погоды",
     "weatherServerAll": "Синхронизировать весь прогноз погоды",
