--- a/admin/i18n/en.json
+++ b/admin/i18n/en.json
@@ -1,8 +1,8 @@
 {
-    "host": "Miniserver host name / IP",
-    "password": "Miniserver password",
-    "port": "Miniserver port",
-    "username": "Miniserver username",
+    "miniserverHost": "Miniserver host name / IP",
+    "miniserverPassword": "Miniserver password",
+    "miniserverPort": "Miniserver port",
+    "miniserverUsername": "Miniserver username",
     "syncFunctions": "Functions",
     "syncNames": "Names",
     "syncRooms": "Rooms",
