--- a/admin/i18n/es.json
+++ b/admin/i18n/es.json
@@ -1,15 +1,15 @@
 {
-    "host": "Nombre de host/IP del miniservidor",
+    "miniserverHost": "Nombre de host/IP del miniservidor",
     "loxone adapter settings": "Ajustes del adaptador para loxone",
     "option1": "opción1",
     "option2": "opción2",
-    "password": "Contraseña del miniservidor",
-    "port": "Puerto de miniservidor",
+    "miniserverPassword": "Contraseña del miniservidor",
+    "miniserverPort": "Puerto de miniservidor",
     "syncFunctions": "Funciones",
     "syncNames": "Nombres",
     "syncRooms": "Alojamiento",
     "synchronize": "Sincronizar",
-    "username": "Nombre de usuario del miniservidor",
+    "miniserverUsername": "Nombre de usuario del miniservidor",
     "weatherServer": "Servidor meteorológico",
     "weatherServer1day": "Sincronizar 24 horas de previsión meteorológica",
     "weatherServerAll": "Sincronizar todo el pronóstico del tiempo",
